--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
@@ -12,8 +12,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FYP_ChildAbuseGIS2013</RootNamespace>
     <AssemblyName>FYP_ChildAbuseGIS2013</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,17 +34,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Npgsql">
-      <HintPath>..\..\..\Software\Database\Npgsql2.0.13.91-bin-ms.net3.5sp1\Npgsql.dll</HintPath>
+    <Reference Include="Npgsql, Version=2.0.13.91, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Dropbox\FYPJ 2013 P3\Software\Database\Npgsql2.0.13.91-bin-ms.net4.0\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
@@ -51,6 +54,7 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="emotionDB.aspx" />
@@ -86,8 +90,9 @@
     <None Include="Service References\EmotionExpressionDB\Emotion.wsdl" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\LocationController.cs" />
     <Compile Include="Controller\MainController.cs" />
-    <Compile Include="Controller\VideoController.cs" />
+    <Compile Include="Controller\FileController.cs" />
     <Compile Include="Design.Master.cs">
       <DependentUpon>Design.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -110,9 +115,8 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Model\Analysis.cs" />
-    <Compile Include="Model\Evidence.cs" />
     <Compile Include="Model\Location.cs" />
-    <Compile Include="Model\Video.cs" />
+    <Compile Include="Model\File.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\EmotionExpressionDB\Reference.cs">
       <AutoGen>True</AutoGen>
