--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\jquery.dataTables.css" />
+    <Content Include="css\jquery.jqplot.min.css" />
     <Content Include="css\jquery.mobile-1.3.2.min.css" />
     <Content Include="css\onemapDesign.css" />
     <Content Include="css\share.css" />
@@ -144,7 +145,11 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <Content Include="css\designTemplete.css" />
-    <Content Include="Result.aspx" />
+    <Content Include="result.aspx" />
+    <Content Include="script\chart\excanvas.min.js" />
+    <Content Include="script\chart\jqplot.donutRenderer.min.js" />
+    <Content Include="script\chart\jqplot.pieRenderer.min.js" />
+    <Content Include="script\chart\jquery.jqplot.min.js" />
     <Content Include="script\jquery-1.8.3.js" />
     <Content Include="script\jquery.dataTables.js" />
     <Content Include="script\jquery.dataTables.min.js" />
@@ -187,12 +192,12 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result.aspx.cs">
-      <DependentUpon>Result.aspx</DependentUpon>
+    <Compile Include="result.aspx.cs">
+      <DependentUpon>result.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Result.aspx.designer.cs">
-      <DependentUpon>Result.aspx</DependentUpon>
+    <Compile Include="result.aspx.designer.cs">
+      <DependentUpon>result.aspx</DependentUpon>
     </Compile>
     <Compile Include="Service References\EmotionExpressionDB\Reference.cs">
       <AutoGen>True</AutoGen>
