--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.SkinDetection/FYP_ChildAbuseGIS2013.SkinDetection.csproj
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.SkinDetection/FYP_ChildAbuseGIS2013.SkinDetection.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C6CDCBCE-EB15-4A3F-BFB4-40E94D6DC04E}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FYP_ChildAbuseGIS2013.SkinDetection</RootNamespace>
     <AssemblyName>FYP_ChildAbuseGIS2013.SkinDetection</AssemblyName>
@@ -32,6 +32,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Emgu.CV">
