--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
@@ -154,7 +154,6 @@
     <Content Include="css\designTemplete.css" />
     <Content Include="result.aspx" />
     <Content Include="script\chart\chartSlideshow.js" />
-    <Content Include="script\chart\displayChart.js" />
     <Content Include="script\chart\excanvas.min.js" />
     <Content Include="script\chart\jqplot.donutRenderer.min.js" />
     <Content Include="script\chart\jqplot.pieRenderer.min.js" />
@@ -166,6 +165,7 @@
     <Content Include="script\jquery.mobile-1.3.2.js" />
     <Content Include="script\jquery.mobile-1.3.2.min.js" />
     <Content Include="share.aspx" />
+    <Content Include="video.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -219,6 +219,13 @@
     </Compile>
     <Compile Include="share.aspx.designer.cs">
       <DependentUpon>share.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="video.aspx.cs">
+      <DependentUpon>video.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="video.aspx.designer.cs">
+      <DependentUpon>video.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
