--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/Web.config
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/Web.config
@@ -108,6 +108,10 @@
         serializeAs="String">
         <value>http://tasks.arcgisonline.com/ArcGIS/services/Geometry/GeometryServer</value>
       </setting>
+      <setting name="FYP_ChildAbuseGIS2013_com_arcgisonline_tasks1_Geometry_GeometryServer"
+        serializeAs="String">
+        <value>http://tasks.arcgisonline.com/ArcGIS/services/Geometry/GeometryServer</value>
+      </setting>
     </FYP_ChildAbuseGIS2013.Properties.Settings>
   </applicationSettings>
 </configuration>
