--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
@@ -61,6 +61,10 @@
     <Reference Include="Mono.Security">
       <HintPath>..\packages\Npgsql.2.0.12.1\lib\net40\Mono.Security.dll</HintPath>
     </Reference>
+    <Reference Include="NAudio, Version=1.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="Npgsql">
       <HintPath>..\packages\Npgsql.2.0.12.1\lib\net40\Npgsql.dll</HintPath>
     </Reference>
@@ -115,6 +119,10 @@
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="ZedGraph, Version=5.1.5.28844, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\ZedGraph.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\jquery.dataTables.css" />
@@ -127,6 +135,7 @@
     <Content Include="image\childcare.png" />
     <Content Include="image\facebook-white.png" />
     <Content Include="image\FYP2013.png" />
+    <Content Include="image\google.png" />
     <Content Include="image\googlePlus.png" />
     <Content Include="image\loading.gif" />
     <Content Include="image\locationMarker.png" />
@@ -142,9 +151,18 @@
     <Content Include="Design.Master" />
     <Content Include="index.aspx" />
     <Content Include="js\InfoWindow.js" />
+    <Content Include="js\jquery-1.9.1.js" />
+    <Content Include="js\jquery-ui-1.10.3.custom.js" />
+    <Content Include="js\jquery-ui-1.10.3.custom.min.js" />
+    <Content Include="js\share.js" />
+    <Content Include="js\videoplayer.js" />
     <Content Include="packages.config" />
     <None Include="Properties\DataSources\System.Data.DataSet.datasource" />
     <Content Include="proxy.ashx" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Service References\EmotionExpressionDB\Emotion.disco" />
     <None Include="Service References\EmotionExpressionDB\configuration91.svcinfo" />
     <None Include="Service References\EmotionExpressionDB\configuration.svcinfo" />
@@ -168,6 +186,7 @@
     <Content Include="script\jquery.mobile-1.3.2.js" />
     <Content Include="script\jquery.mobile-1.3.2.min.js" />
     <Content Include="share.aspx" />
+    <Content Include="video.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -176,8 +195,35 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <None Include="Service References\EmotionExpressionDB\Emotion.wsdl" />
+    <None Include="Web References\com.arcgisonline.tasks1\Geometry.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\GeometryServer.wsdl" />
+    <None Include="Web References\com.arcgisonline.tasks1\Point.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\Polygon.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\Polyline.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\RelationResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\SpatialReference.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.arcgisonline.tasks1\Unit.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoordinatesConverter.cs" />
     <Compile Include="Design.Master.cs">
       <DependentUpon>Design.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -203,6 +249,11 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="proxy.ashx.cs">
       <DependentUpon>proxy.ashx</DependentUpon>
     </Compile>
@@ -224,6 +275,18 @@
     </Compile>
     <Compile Include="share.aspx.designer.cs">
       <DependentUpon>share.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="video.aspx.cs">
+      <DependentUpon>video.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="video.aspx.designer.cs">
+      <DependentUpon>video.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\com.arcgisonline.tasks1\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -249,6 +312,26 @@
       <Project>{C6CDCBCE-EB15-4A3F-BFB4-40E94D6DC04E}</Project>
       <Name>FYP_ChildAbuseGIS2013.SkinDetection</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FYP_ChildAbuseGIS2013.SoundDetector\FYP_ChildAbuseGIS2013.SoundDetector.csproj">
+      <Project>{BB0A20A2-6313-479D-A71E-0E3AE2AE0B12}</Project>
+      <Name>FYP_ChildAbuseGIS2013.SoundDetector</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://tasks.arcgisonline.com/ArcGIS/services/Geometry/GeometryServer%3fwsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\com.arcgisonline.tasks1\</RelPath>
+      <UpdateFromURL>http://tasks.arcgisonline.com/ArcGIS/services/Geometry/GeometryServer%3fwsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>FYP_ChildAbuseGIS2013_com_arcgisonline_tasks1_Geometry_GeometryServer</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
