--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013.csproj
@@ -61,6 +61,10 @@
     <Reference Include="Mono.Security">
       <HintPath>..\packages\Npgsql.2.0.12.1\lib\net40\Mono.Security.dll</HintPath>
     </Reference>
+    <Reference Include="NAudio, Version=1.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="Npgsql">
       <HintPath>..\packages\Npgsql.2.0.12.1\lib\net40\Npgsql.dll</HintPath>
     </Reference>
@@ -115,6 +119,10 @@
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="ZedGraph, Version=5.1.5.28844, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\ZedGraph.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\jquery.dataTables.css" />
@@ -125,9 +133,17 @@
     <Content Include="emotionDB.aspx" />
     <Content Include="Global.asax" />
     <Content Include="image\childcare.png" />
+    <Content Include="image\draw.png" />
+    <Content Include="image\draw_hover.png" />
+    <Content Include="image\edit_clear.png" />
+    <Content Include="image\edit_clear_hover.png" />
     <Content Include="image\facebook-white.png" />
     <Content Include="image\FYP2013.png" />
     <Content Include="image\googlePlus.png" />
+    <Content Include="image\heatmap.png" />
+    <Content Include="image\heatmap_hover.png" />
+    <Content Include="image\kindergarten.png" />
+    <Content Include="image\kindergarten_hover.png" />
     <Content Include="image\loading.gif" />
     <Content Include="image\locationMarker.png" />
     <Content Include="image\locationMarker2.png" />
@@ -140,8 +156,13 @@
     <Content Include="image\spf.png" />
     <Content Include="image\twitter_logo_white.png" />
     <Content Include="Design.Master" />
+    <Content Include="image\vw.png" />
     <Content Include="index.aspx" />
+    <Content Include="js\heatmap-arcgis.js" />
+    <Content Include="js\heatmap.js" />
+    <Content Include="js\HeatMapCustom.js" />
     <Content Include="js\InfoWindow.js" />
+    <Content Include="js\onemap.js" />
     <Content Include="packages.config" />
     <None Include="Properties\DataSources\System.Data.DataSet.datasource" />
     <Content Include="proxy.ashx" />
@@ -248,6 +269,10 @@
     <ProjectReference Include="..\FYP_ChildAbuseGIS2013.SkinDetection\FYP_ChildAbuseGIS2013.SkinDetection.csproj">
       <Project>{C6CDCBCE-EB15-4A3F-BFB4-40E94D6DC04E}</Project>
       <Name>FYP_ChildAbuseGIS2013.SkinDetection</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FYP_ChildAbuseGIS2013.SoundDetector\FYP_ChildAbuseGIS2013.SoundDetector.csproj">
+      <Project>{BB0A20A2-6313-479D-A71E-0E3AE2AE0B12}</Project>
+      <Name>FYP_ChildAbuseGIS2013.SoundDetector</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
