--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/Web.config
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/Web.config
@@ -6,6 +6,14 @@
     </sectionGroup>
   </configSections>
   <system.webServer>
+
+      <httpProtocol>
+        <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        </customHeaders>
+      </httpProtocol>
+
     <!-- ServiceStack: Required -->
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
